istio/example/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: msa-demo
  labels:
    istio-injection: enabled
