istio/example/a-application.yaml
---
metadata:
  name: service-a
  namespace: msa-demo
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: msa-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:latest
        args:
        - "-text=service-a response"
        ports:
        - containerPort: 5678
