istio/example/b-application.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: msa-demo
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: msa-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:latest
        args:
        - "-text=service-b response"
        ports:
        - containerPort: 5678
