istio/example/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: msa-vs
  namespace: msa-demo
spec:
  hosts:
  - "*"
  gateways:
  - msa-gateway
  http:
  - match:
    - uri:
        prefix: /service-a
    route:
    - destination:
        host: service-a
        port:
          number: 80
  - match:
    - uri:
        prefix: /service-b
    route:
    - destination:
        host: service-b
        port:
          number: 80
